# My_AlphaZero

./: README.md  pyproject.toml  setup.py
PMAZ/: LICENSE.txt  agent.py  game.py  main.py  model.py
optimizers/model_4_64_ConnectFour/: optimizer_0_ConnectFour.pth  optimizer_1_ConnectFour.pth  optimizer_2_ConnectFour.pth  optimizer_3_ConnectFour.pth  optimizer_4_ConnectFour.pth  optimizer_5_ConnectFour.pth  optimizer_6_ConnectFour.pth  optimizer_7_ConnectFour.pth
optimizers/model_4_64_TicTacToe/: optimizer_0_ConnectFour.pth  optimizer_0_TicTacToe.pth  optimizer_1_ConnectFour.pth  optimizer_1_TicTacToe.pth  optimizer_2_ConnectFour.pth  optimizer_2_TicTacToe.pth  optimizer_3_ConnectFour.pth  optimizer_3_TicTacToe.pth  optimizer_4_ConnectFour.pth  optimizer_4_TicTacToe.pth  optimizer_5_ConnectFour.pth  optimizer_5_TicTacToe.pth  optimizer_6_ConnectFour.pth  optimizer_6_TicTacToe.pth  optimizer_7_ConnectFour.pth  optimizer_7_TicTacToe.pth
